fix: modal covers all body

--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -5,10 +5,10 @@
   backdrop-filter: blur(3px);
   width: 100vw;
   height: 100vh;
+  position: fixed;
   top: 0;
   left: 0;
   z-index: 2;
-  position: absolute;
   display: flex;
   justify-content: center;
   align-items: center;
